--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.maheshbabu11</groupId>
     <artifactId>Excel2DataMap</artifactId>
-<!--    <version>1.0-SNAPSHOT</version>-->
+    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Excel2DataMap</name>
     <description>A library for converting excel files to Datamaps</description>
@@ -25,11 +25,11 @@
             <url>https://maheshbabu11.dev/</url>
         </developer>
     </developers>
-<!--    <scm>-->
-<!--        <url>https://github.com/MaheshBabu11/Excel2DataMap</url>-->
-<!--        <connection>scm:git:https://github.com/MaheshBabu11/Excel2DataMap.git</connection>-->
-<!--        <developerConnection>scm:git:https://github.com/MaheshBabu11/Excel2DataMap.git</developerConnection>-->
-<!--    </scm>-->
+    <!--    <scm>-->
+    <!--        <url>https://github.com/MaheshBabu11/Excel2DataMap</url>-->
+    <!--        <connection>scm:git:https://github.com/MaheshBabu11/Excel2DataMap.git</connection>-->
+    <!--        <developerConnection>scm:git:https://github.com/MaheshBabu11/Excel2DataMap.git</developerConnection>-->
+    <!--    </scm>-->
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
