--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.maheshbabu11</groupId>
     <artifactId>Excel2DataMap</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1</version>
     <packaging>jar</packaging>
     <name>Excel2DataMap</name>
     <description>A library for converting excel files to Datamaps</description>
