--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -27,9 +27,9 @@ jobs:
         settings-path: ${{ github.workspace }}  # location for the settings.xml file
 
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -Dmaven.resolver.transport=wagon -B package --file pom.xml
 
     - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy -Dmaven.resolver.transport=wagon
+      run: mvn deploy
       env:
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
