--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.maheshbabu11</groupId>
     <artifactId>Excel2DataMap</artifactId>
-    <version>0.1</version>
+    <version>0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Excel2DataMap</name>
     <description>A library for converting excel files to Datamaps</description>
