--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -30,6 +30,6 @@ jobs:
       run: mvn -Dmaven.resolver.transport=wagon -B package --file pom.xml
 
     - name: Publish to GitHub Packages Apache Maven
-      run: mvn -V -B -X -Darguments=-Dmaven.resolver.transport=wagon release:prepare release:perform
+      run:  mvn -V -B -X -Darguments=-Dmaven.resolver.transport=wagon release:prepare release:perform
       env:
-          GITHUB_TOKEN: ${{ github.token }
+        GITHUB_TOKEN: ${{ github.token }}
