--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -18,6 +18,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - run: |
+          git config user.name "GitHub Actions"
+          git config user.email "git@github.com"
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
