--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -12,8 +12,10 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    permissions: read-all|write-all
-
+    permissions:
+        contents: write
+        issues: write
+        pull-requests: write
     steps:
     - uses: actions/checkout@v3
     - run: |
