--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -30,9 +30,9 @@ jobs:
         settings-path: ${{ github.workspace }}  # location for the settings.xml file
 
     - name: Build with Maven
-      run: mvn -Dmaven.resolver.transport=wagon -B package --file pom.xml
+      run: mvn -B package --file pom.xml
 
     - name: Publish to GitHub Packages Apache Maven
-      run:  mvn -V -B -X -Darguments=-Dmaven.resolver.transport=wagon release:prepare release:perform
+      run:  mvn -V -B -X release:prepare release:perform
       env:
         GITHUB_TOKEN: ${{ github.token }}
