--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -27,7 +27,7 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }}  # location for the settings.xml file
+        settings-path: ${{ github.workspace }}/.m2/settings.xml  # location for the settings.xml file
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml
