--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -16,6 +16,7 @@ jobs:
         contents: write
         issues: write
         pull-requests: write
+        packages: write
     steps:
     - uses: actions/checkout@v3
     - run: |
