--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -34,6 +34,6 @@ jobs:
       run: mvn -B package --file pom.xml
 
     - name: Publish to GitHub Packages Apache Maven
-      run:  mvn -V -B -X release:clean release:prepare release:perform -DcheckModificationExcludeList=settings.xml
+      run:  mvn -V -B -X release:clean release:prepare release:perform 
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
