--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -22,6 +22,7 @@ jobs:
     - run: |
           git config user.name "GitHub Actions"
           git config user.email "git@github.com"
+          git stash
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
@@ -34,6 +35,8 @@ jobs:
       run: mvn -B package --file pom.xml
 
     - name: Publish to GitHub Packages Apache Maven
-      run:  mvn -V -B -X release:clean release:prepare release:perform 
+      run:  |
+        mvn -V -B -X release:clean release:prepare release:perform 
+        git stash pop      
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
