--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -23,6 +23,10 @@ jobs:
           git config user.name "GitHub Actions"
           git config user.email "git@github.com"
           git stash
+          
+    - name: Clear Workspace
+      run: rm -rf ${{ github.workspace }}
+      
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
