--- a/pom.xml
+++ b/pom.xml
@@ -74,4 +74,13 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-release-plugin</artifactId>
+            <version>3.0.1</version>          
+        </plugin>      
+    </plugins>
+</build>
 </project>
