--- a/release.properties
+++ b/release.properties
@@ -1,5 +1,5 @@
 #release configuration
-#Fri Aug 18 15:37:17 IST 2023
+#Fri Aug 18 15:42:17 IST 2023
 projectVersionPolicyId=default
 scm.rollbackCommitComment=@{prefix} rollback the release of @{releaseLabel}
 remoteTagging=true
@@ -15,7 +15,7 @@ projectVersionPolicyConfig=<projectVersionPolicyConfig>${projectVersionPolicyCon
 project.scm.com.github.maheshbabu11\:Excel2DataMap.url=https\://github.com/MaheshBabu11/Excel2DataMap.git
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
 pushChanges=true
-project.scm.com.github.maheshbabu11\:Excel2DataMap.tag=HEAD
+project.scm.com.github.maheshbabu11\:Excel2DataMap.tag=Excel2DataMap-0.20
 project.scm.com.github.maheshbabu11\:Excel2DataMap.connection=scm\:git\:https\://github.com/MaheshBabu11/Excel2DataMap.git
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
