--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -22,7 +22,7 @@ jobs:
     - run: |
           git config user.name "GitHub Actions"
           git config user.email "git@github.com"
-          git stash      
+          
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
@@ -34,12 +34,13 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
-    - name: Debug Pom File
-      run: cat pom.xml
+    - name: Commit all changes before publishing
+      run: |
+        git add .
+        git commit -m "added version changes"
 
     - name: Publish to GitHub Packages Apache Maven
       run:  |
-        mvn -V -B -X release:clean release:perform 
-        git stash pop      
+         mvn -V -B -X -Darguments="-DskipTests" release:clean release:prepare release:perform   
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
