--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -18,6 +18,7 @@ jobs:
         pull-requests: write
         packages: write
     steps:
+    - name : GitHub Actions commits
     - uses: actions/checkout@v3
     - run: |
           git config user.name "GitHub Actions"
