--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -2,7 +2,6 @@
 # For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
 
 name: Maven Package
-
 on:
   release:
     types: [created]
@@ -41,8 +40,7 @@ jobs:
         git commit -m "added version changes"
 
     - name: Publish to GitHub Packages Apache Maven
-      run:  |
-         mvn -V -B -X -Darguments="-DskipTests" release:clean release:prepare release:perform   
+      run: mvn -V -B -X -Darguments="-DskipTests" release:clean release:prepare release:perform   
       env:
-        GITHUB_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
-        GITHUB_ACTOR : 'MaheshBabu11'
+          GITHUB_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
+          GITHUB_ACTOR : 'MaheshBabu11'
