--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -18,8 +18,8 @@ jobs:
         packages: write
     steps:
     - name : GitHub Actions commits
-    - uses: actions/checkout@v3
-    - run: |
+      uses: actions/checkout@v3
+      run: |
           git config user.name "GitHub Actions"
           git config user.email "git@github.com"
           
@@ -43,4 +43,5 @@ jobs:
       run: mvn -V -B -X -Darguments="-DskipTests" release:clean release:prepare release:perform   
       env:
           GITHUB_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
+          GITHUB_ACTOR : 'MaheshBabu11'
           
