--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -17,9 +17,8 @@ jobs:
         pull-requests: write
         packages: write
     steps:
-    - name : GitHub Actions commits
-      uses: actions/checkout@v3
-      run: |
+    - uses: actions/checkout@v3
+    - run: |
           git config user.name "GitHub Actions"
           git config user.email "git@github.com"
           
